--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -17,6 +17,15 @@ body:
       placeholder: Tell us what you see!
     validations:
       required: true
+   - type: textarea
+    id: steps
+    attributes:
+      label: Steps to recreate
+      description: How did this happen?
+      placeholder: If you don't know leave blank
+      value: N/A
+    validations:
+      required: true
   - type: textarea
     id: logs
     attributes:
