--- a/src/CSAuto/App.config
+++ b/src/CSAuto/App.config
@@ -106,6 +106,9 @@
             <setting name="oldAutoBuy" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="sendAcceptImage" serializeAs="String">
+                <value>False</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
     <applicationSettings>
