Minor improvments * languages now dont seperate long sentences with dynamically changed variables, they now use the string,Format to update * error log clears on startup now, and saves all errors while the app is running * saving to error log when there is an exception on startup * looks like the old way of capturing the screen now works? just for safety let the user select which technique to use

--- a/src/CSAuto/App.config
+++ b/src/CSAuto/App.config
@@ -109,6 +109,9 @@
             <setting name="sendAcceptImage" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="oldScreenCaptureWay" serializeAs="String">
+                <value>False</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
     <applicationSettings>
