--- a/.github/workflows/on-version-bump.yml
+++ b/.github/workflows/on-version-bump.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.12
+      uses: actions/setup-python@v3
       with:
         python-version: "3.12"
     - name: Generate FullChangelog.MD
