Improvments * added closing csauto when exiting cs2 * loading changelog and version from raw data, not using api anymore

--- a/src/CSAuto/App.config
+++ b/src/CSAuto/App.config
@@ -112,6 +112,9 @@
             <setting name="oldScreenCaptureWay" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="autoCloseCSAuto" serializeAs="String">
+                <value>False</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
     <applicationSettings>
