--- a/src/CSAuto/Properties/Settings.settings
+++ b/src/CSAuto/Properties/Settings.settings
@@ -129,5 +129,8 @@
     <Setting Name="oldScreenCaptureWay" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="autoCloseCSAuto" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
