Improvments * added app icon to setup wizard * setup now gets version from .exe file * languages are now getting compressed to save space

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,9 @@ Generated\ Files/
 TestResult.xml
 nunit-*.xml
 
+#Language compress results
+*.pac
+
 # Build Results of an ATL Project
 [Dd]ebugPS/
 [Rr]eleasePS/
