--- a/.github/workflows/on-version-bump.yml
+++ b/.github/workflows/on-version-bump.yml
@@ -29,3 +29,4 @@ jobs:
         message: 'Update FullChangelog and Version'
         default_author: github_actions
         push: true
+        branch: 'master'
