--- a/.github/workflows/on-version-bump.yml
+++ b/.github/workflows/on-version-bump.yml
@@ -29,4 +29,4 @@ jobs:
         message: 'Update FullChangelog and Version'
         default_author: github_actions
         push: true
-        branch: 'master'
+        new_branch: 'master'
