--- a/.github/workflows/on-version-bump.yml
+++ b/.github/workflows/on-version-bump.yml
@@ -3,7 +3,7 @@ name: Update Changelog & Version
 on:
   release:
    types:
-      - edited
+      - published
       - deleted
   workflow_dispatch: {}
 
