--- a/src/CSAuto/CSAuto.csproj
+++ b/src/CSAuto/CSAuto.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Utils\Telegram.cs" />
     <Compile Include="Utils\TypeConvertor.cs" />
     <Compile Include="Utils\Steam.cs" />
+    <Compile Include="Utils\WinVersion.cs" />
     <Page Include="GUIWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
