Updates * added new auto buy, working pretty good, can detect when buy menu is open by using hCursor * fixes with gamestate, added grenade type

--- a/src/CSAuto/CSAuto.csproj
+++ b/src/CSAuto/CSAuto.csproj
@@ -87,11 +87,11 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
   </ItemGroup>
-  <!-- <ItemGroup> -->
-    <!-- <Content Include="resource\images\**"> -->
-      <!-- <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory> -->
-    <!-- </Content> -->
-  <!-- </ItemGroup> -->
+  <ItemGroup>
+    <Content Include="resource\images\**">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
