--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,7 +1,8 @@
 name: Feature request
 description: Suggest an idea for this project
-title: "[FEAT/REQ] "
-labels: ["enhancement"]
+title: '[FEAT/REQ] '
+labels:
+  - enhancement
 assignees:
   - murkyyt
 body:
@@ -9,7 +10,9 @@ body:
     id: is-related
     attributes:
       label: Is your feature request related to a problem? Please describe.
-      placeholder: A clear and concise description of what the problem is. Ex. I'm always frustrated when [...]
+      placeholder: >-
+        A clear and concise description of what the problem is. Ex. I'm always
+        frustrated when [...]
     validations:
       required: true
   - type: textarea
@@ -23,10 +26,12 @@ body:
     id: alternatives
     attributes:
       label: Describe alternatives you've considered
-      description: A clear and concise description of any alternative solutions or features you've considered.
+      description: >-
+        A clear and concise description of any alternative solutions or features
+        you've considered.
     validations:
       required: true
-   - type: textarea
+  - type: textarea
     id: alternatives
     attributes:
       label: Additional context
