--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -32,7 +32,7 @@ body:
     validations:
       required: true
   - type: textarea
-    id: alternatives
+    id: additional-info
     attributes:
       label: Additional context
       description: Add any other context or screenshots about the feature request here.
