--- a/src/CSAuto/CSAuto.csproj
+++ b/src/CSAuto/CSAuto.csproj
@@ -109,8 +109,6 @@
     <Compile Include="Languages\_Language.cs" />
     <Compile Include="Utils\CSGO\ConDump.cs" />
     <Compile Include="Utils\DXGICapture.cs" />
-    <Compile Include="Utils\Markdown.Xaml\Markdown.cs" />
-    <Compile Include="Utils\Markdown.Xaml\TextToFlowDocumentConverter.cs" />
     <Compile Include="Utils\Nager.TcpClient\TcpClient.cs" />
     <Compile Include="Utils\Nager.TcpClient\TcpClientConfig.cs" />
     <Compile Include="Utils\Nager.TcpClient\TcpClientKeepAliveConfig.cs" />
@@ -224,6 +222,9 @@
     <PackageReference Include="MahApps.Metro">
       <Version>2.4.10</Version>
     </PackageReference>
+    <PackageReference Include="MdXaml">
+      <Version>1.25.0</Version>
+    </PackageReference>
     <PackageReference Include="System.Buffers">
       <Version>4.5.1</Version>
     </PackageReference>
@@ -240,8 +241,6 @@
 call $(SolutionDir)stcmprs.exe $(OutDir)
 call $(SolutionDir)impack.exe $(OutDir)
 rm -r $(ProjectDir)$(OutDir)resource\.portable
-copy $(ProjectDir)resource\.portable $(ProjectDir)$(OutDir)resource\.portable
-attrib +H $(ProjectDir)$(OutDir)resource\.portable
-echo Copied .portable and added +H attrib</PreBuildEvent>
+copy $(ProjectDir)resource\.portable $(ProjectDir)$(OutDir)resource\.portable</PreBuildEvent>
   </PropertyGroup>
 </Project>
