Telegram * added custom bot token

--- a/src/CSAuto/App.config
+++ b/src/CSAuto/App.config
@@ -106,6 +106,9 @@
             <setting name="autoCloseCSAuto" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="customTelegramToken" serializeAs="String">
+                <value />
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
     <applicationSettings>
