--- a/src/CSAuto/Properties/Settings.settings
+++ b/src/CSAuto/Properties/Settings.settings
@@ -123,5 +123,8 @@
     <Setting Name="autoCloseCSAuto" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="customTelegramToken" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
