--- a/src/CSAuto_Mobile/CSAuto_Mobile.csproj
+++ b/src/CSAuto_Mobile/CSAuto_Mobile.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net7.0-android</TargetFramework>
-    <SupportedOSPlatformVersion>23.0</SupportedOSPlatformVersion>
+    <TargetFramework>net7.0-android33.0</TargetFramework>
+    <SupportedOSPlatformVersion>24.0</SupportedOSPlatformVersion>
     <OutputType>Exe</OutputType>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
