--- a/.github/workflows/on-version-bump.yml
+++ b/.github/workflows/on-version-bump.yml
@@ -36,7 +36,7 @@ jobs:
       uses: EndBug/add-and-commit@v9
       with:
         add: 'Docs Data'
-        message: 'Update FullChangelog and Version'
+        message: 'chore(ci): update full changelog and version'
         default_author: github_actions
         push: true
         new_branch: 'master'
