feat(focus): can focus on cs window when game found and focus back to previous window

--- a/src/CSAuto/App.config
+++ b/src/CSAuto/App.config
@@ -109,6 +109,12 @@
             <setting name="customTelegramToken" serializeAs="String">
                 <value />
             </setting>
+            <setting name="autoFocusOnCS" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="focusBackOnOriginalWindow" serializeAs="String">
+                <value>True</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
     <applicationSettings>
