--- a/src/CSAuto/Properties/Settings.settings
+++ b/src/CSAuto/Properties/Settings.settings
@@ -126,5 +126,11 @@
     <Setting Name="customTelegramToken" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="autoFocusOnCS" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="focusBackOnOriginalWindow" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
