feat(auto-buy): added global toggle for auto buy

--- a/src/CSAuto/App.config
+++ b/src/CSAuto/App.config
@@ -115,6 +115,9 @@
             <setting name="focusBackOnOriginalWindow" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="autoBuyEnabled" serializeAs="String">
+                <value>True</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
     <applicationSettings>
