--- a/src/CSAuto/Properties/Settings.settings
+++ b/src/CSAuto/Properties/Settings.settings
@@ -132,5 +132,8 @@
     <Setting Name="focusBackOnOriginalWindow" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="autoBuyEnabled" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
