--- a/src/CSAuto/CSAuto.csproj
+++ b/src/CSAuto/CSAuto.csproj
@@ -61,6 +61,9 @@
   <PropertyGroup>
     <ApplicationIcon>Icons\main.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Steamworks.NET, Version=20.2.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
@@ -212,6 +215,7 @@
       <LastGenOutput>Strings.ru.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include=".editorconfig" />
+    <None Include="app.manifest" />
     <None Include="Properties\DebugSettings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>DebugSettings.Designer.cs</LastGenOutput>
