feat(win11): added rounded corners to context menu, a little dumb way by just copying newer styles but works, for now... fix(crash): fixed crash when steamid3 isnt found at all fix(log): fixed log loading when steamid isnt found fix(crash): fixed when app.current = null

--- a/src/CSAuto/CSAuto.csproj
+++ b/src/CSAuto/CSAuto.csproj
@@ -174,6 +174,10 @@
       <DependentUpon>MainApp.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="RoundedResources\RoundedResources.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="VectorResources\VectorImages.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
