feat(server): the server is now on the desktop app and the client is the mobile app

--- a/src/CSAuto/App.config
+++ b/src/CSAuto/App.config
@@ -124,6 +124,9 @@
             <setting name="autoBuyEnabled" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="serverPort" serializeAs="String">
+                <value>21724</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
     <applicationSettings>
