--- a/src/CSAuto_Mobile/CSAuto_Mobile.csproj
+++ b/src/CSAuto_Mobile/CSAuto_Mobile.csproj
@@ -10,9 +10,11 @@
     <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\CSAuto\Shared\NetworkTypes.cs" Link="NetworkTypes.cs" />
     <Compile Include="..\CSAuto\Utils\CSGO\GameState.cs" Link="GameState.cs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
     <PackageReference Include="Xamarin.AndroidX.Core" Version="1.12.0.3" />
   </ItemGroup>
   <ItemGroup>
