feat(mouse_input): added checkbox whether to use SendInput or mouse_event fix(server): closing server

--- a/src/CSAuto/App.config
+++ b/src/CSAuto/App.config
@@ -127,6 +127,9 @@
             <setting name="serverPort" serializeAs="String">
                 <value>21724</value>
             </setting>
+            <setting name="oldMouseInput" serializeAs="String">
+                <value>False</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
     <applicationSettings>
