--- a/src/CSAuto/Properties/Settings.settings
+++ b/src/CSAuto/Properties/Settings.settings
@@ -138,5 +138,8 @@
     <Setting Name="serverPort" Type="System.String" Scope="User">
       <Value Profile="(Default)">21724</Value>
     </Setting>
+    <Setting Name="oldMouseInput" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
