--- a/src/CSAuto/CSAuto.csproj
+++ b/src/CSAuto/CSAuto.csproj
@@ -65,10 +65,6 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Steamworks.NET, Version=20.2.0.0, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>.\Steamworks.NET.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
@@ -283,9 +279,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PreBuildEvent>rm -r $(ProjectDir)$(OutDir)resource
-rm -r $(ProjectDir)$(OutDir)debug
-rm -r $(ProjectDir)$(OutDir)bin
+    <PreBuildEvent>rmdir /q /s $(ProjectDir)$(OutDir)resource
+rmdir /q /s $(ProjectDir)$(OutDir)debug
+rmdir /q /s $(ProjectDir)$(OutDir)bin
 mkdir $(ProjectDir)$(OutDir)resource
 mkdir $(ProjectDir)$(OutDir)bin
 call $(SolutionDir)Misc\prebuild.bat $(SolutionDir)
