feat(auto-buy): added option to disable rebuying

--- a/src/CSAuto/App.config
+++ b/src/CSAuto/App.config
@@ -127,6 +127,9 @@
             <setting name="oldMouseInput" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="autoBuyRebuy" serializeAs="String">
+                <value>True</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
     <applicationSettings>
