--- a/src/CSAuto/CSAuto.csproj
+++ b/src/CSAuto/CSAuto.csproj
@@ -100,6 +100,7 @@
       <DependentUpon>APIKeys.resx</DependentUpon>
     </Compile>
     <Compile Include="AutoBuyMenu.cs" />
+    <Compile Include="CompileInfo.cs" />
     <Compile Include="Windows\DebugInfo.xaml.cs">
       <DependentUpon>DebugInfo.xaml</DependentUpon>
     </Compile>
@@ -294,7 +295,8 @@ mkdir $(ProjectDir)$(OutDir)resource
 mkdir $(ProjectDir)$(OutDir)bin
 call $(SolutionDir)Misc\prebuild.bat $(SolutionDir)
 call $(SolutionDir)Misc\impack.exe $(ProjectDir)resource\images $(TargetDir)resource\images.pac
-copy $(ProjectDir)resource\.portable $(ProjectDir)$(OutDir)resource\.portable</PreBuildEvent>
+copy $(ProjectDir)resource\.portable $(ProjectDir)$(OutDir)resource\.portable
+call $(SolutionDir)Misc\compinfgen.exe $(SolutionDir)Misc\CompileData.template $(ProjectDir)CompileInfo.cs</PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PostBuildEvent>move $(ProjectDir)$(OutDir)*.dll $(ProjectDir)$(OutDir)bin\
