--- a/src/CSAuto/CSAuto.csproj
+++ b/src/CSAuto/CSAuto.csproj
@@ -101,6 +101,7 @@
     </Compile>
     <Compile Include="AutoBuyMenu.cs" />
     <Compile Include="CompileInfo.cs" />
+    <Compile Include="Native\DisplayInfo.cs" />
     <Compile Include="Windows\DebugInfo.xaml.cs">
       <DependentUpon>DebugInfo.xaml</DependentUpon>
     </Compile>
