--- a/src/CSAuto/CSAuto.csproj
+++ b/src/CSAuto/CSAuto.csproj
@@ -145,7 +145,7 @@
     <Compile Include="Utils\Github.cs" />
     <Compile Include="Utils\InputBox.cs" />
     <Compile Include="Utils\RegistrySettings.cs" />
-    <Compile Include="Utils\Spotify.cs" />
+    <Compile Include="Utils\Music.cs" />
     <Compile Include="Utils\Telegram.cs" />
     <Compile Include="Utils\TypeConvertor.cs" />
     <Compile Include="Utils\Steam.cs" />
@@ -275,6 +275,9 @@
     </PackageReference>
     <PackageReference Include="MdXaml">
       <Version>1.27.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Windows.SDK.Contracts">
+      <Version>10.0.26100.1742</Version>
     </PackageReference>
     <PackageReference Include="System.Buffers">
       <Version>4.5.1</Version>
